project/deploy/k8s/10-core-erp-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-erp-backend
  namespace: erp-educativo
  labels:
    app: core-erp-backend
spec:
  replicas: 2  # HPA lo ajusta entre minReplicas/maxReplicas de abajo
  selector:
    matchLabels:
      app: core-erp-backend
  template:
    metadata:
      labels:
        app: core-erp-backend
    spec:
      serviceAccountName: erp-backend-sa
      containers:
        - name: core-erp-backend
          image: "REGISTRY/erp-core-backend:TAG"
          ports:
            - containerPort: 8200
          readinessProbe:
            httpGet:
              path: /
              port: 8200
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8200
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: core-erp-backend
  namespace: erp-educativo
spec:
  selector:
    app: core-erp-backend
  ports:
    - port: 8200
      targetPort: 8200
      name: http
